<resources>
  <string name="app_name">PTR</string>

  <!--  Bottom navigation menu titles-->
  <string name="bottom_nav_events">Events</string>
  <string name="bottom_nav_gallery">Gallery</string>
  <string name="bottom_nav_manifesto">Manifesto</string>
  <string name="bottom_nav_candidates">Candidates</string>
  <string name="bottom_nav_more">More</string>

  <string name="long_boring_lorep_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
  <string name="super_long_boring_lorep_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam vulputate dignissim suspendisse in est. Eu turpis egestas pretium aenean pharetra magna ac. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Diam maecenas sed enim ut sem viverra. Dui ut ornare lectus sit. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Vel facilisis volutpat est velit egestas dui id ornare. Tortor dignissim convallis aenean et tortor at. Blandit turpis cursus in hac habitasse. Egestas congue quisque egestas diam in arcu cursus euismod. Diam ut venenatis tellus in metus vulputate eu scelerisque. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Amet nisl suscipit adipiscing bibendum.

Odio ut sem \n\nnulla pharetra diam sit amet nisl suscipit. Pulvinar neque laoreet suspendisse interdum consectetur libero. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Ac turpis egestas integer eget aliquet nibh praesent tristique. Quisque egestas diam in arcu cursus euismod quis. Malesuada proin libero nunc consequat interdum varius sit. Pharetra massa massa ultricies mi quis hendrerit. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque habitant. In hac habitasse platea dictumst quisque sagittis. Mattis enim ut tellus elementum sagittis vitae et. Lacus viverra vitae congue eu. Nulla pellentesque dignissim enim sit amet venenatis urna cursus.

Vel orci porta \n\nnon pulvinar neque laoreet suspendisse interdum. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Pharetra diam sit amet nisl suscipit. Aliquet bibendum enim facilisis gravida. Augue ut lectus arcu bibendum at. Cursus vitae congue mauris rhoncus aenean. Egestas integer eget aliquet nibh. Metus dictum at tempor commodo ullamcorper a. Nisi lacus sed viverra tellus in hac. Rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing. Sit amet tellus cras adipiscing enim eu turpis egestas. Fermentum iaculis eu non diam phasellus vestibulum lorem sed risus. Nibh tortor id aliquet lectus proin nibh nisl condimentum. Laoreet sit amet cursus sit. Auctor eu augue ut lectus arcu. Faucibus et molestie ac feugiat sed. Scelerisque eleifend donec pretium vulputate sapien nec. Felis eget velit aliquet sagittis id consectetur purus ut faucibus.

Quis vel eros donec ac. \n\nArcu ac tortor dignissim convallis aenean. Ac tincidunt vitae semper quis lectus nulla. Feugiat scelerisque varius morbi enim nunc faucibus. Nam aliquam sem et tortor consequat id porta nibh. Tincidunt dui ut ornare lectus sit amet est. Diam vulputate ut pharetra sit amet. Dignissim sodales ut eu sem integer vitae justo. Eleifend donec pretium vulputate sapien nec sagittis. Ipsum consequat nisl vel pretium lectus quam id leo in. Non pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus. Amet commodo nulla facilisi nullam vehicula. Tempor id eu nisl nunc mi ipsum faucibus. Egestas erat imperdiet sed euismod nisi porta lorem mollis aliquam. Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum integer.

Eu tincidunt tortor aliquam \n\n nulla facilisi cras fermentum odio. Eget sit amet tellus cras adipiscing enim. Ut etiam sit amet nisl purus in mollis. Ut tristique et egestas quis ipsum suspendisse ultrices gravida dictum. Velit dignissim sodales ut eu sem integer vitae justo. Sit amet facilisis magna etiam tempor orci. Fames ac turpis egestas sed. Proin libero nunc consequat interdum varius sit amet. Cras ornare arcu dui vivamus arcu felis bibendum ut tristique. Eget felis eget nunc lobortis mattis. Quis eleifend quam adipiscing vitae. Cras fermentum odio eu feugiat pretium nibh. Molestie ac feugiat sed lectus vestibulum.</string>


</resources>
